[package]
name = "actix-multiresponse"
version = "0.4.2"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "actix-multiresponse intents to allow supporting multiple response/request data formats depending on the Content-Type and Accept headers"
readme = "README.md"
repository = "https://github.com/TobiasDeBruijn/actix-multiresponse"
license = "MIT OR Apache-2.0"
keywords = ["actix", "protobuf", "json", "serde", "xml"]
categories = ["encoding", "web-programming"]
documentation = "https://docs.rs/actix-multiresponse/latest/actix_multiresponse/"

[features]
default = ["json", "protobuf"]
json = ["serde", "serde_json"]
protobuf = ["prost"]
xml = ["quick-xml", "serde"]

[dependencies]
thiserror = "1.0.40"
log = "0.4.17"
cfg-if = "1.0.0"
futures-util = "0.3.28"

[dependencies.quick-xml]
version = "0.28.2"
optional = true
features = ["serialize"]

[dependencies.serde_json]
version = "1.0.96"
optional = true

[dependencies.serde]
version = "1.0.162"
optional = true

[dependencies.actix-web]
version = "4.3.1"
default-features = false

[dependencies.prost]
version = "0.11.9"
default-features = false
optional = true

[dev-dependencies]
serde = "1.0.162"
serde_derive = "1.0.162"
prost-derive = "0.11.9"
actix-macros = "0.2.3"
actix-rt = "2.8.0"
serde_json = "1.0.96"

[dev-dependencies.prost]
version = "0.11.9"
default-features = false
features = ["std"]
